# phakebit

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: publish-crate-dry-run.yml  publish-crate.yml  rust.yml
emulators/: Cargo.toml
emulators/turnip1/: emulator.rs  main.rs  memory.rs  pia.rs  terminal.rs
fixtures/: day_of_week.asm
src/: cpu.rs  instruction.rs  instructionset.rs  instrumentation.rs  lib.rs  main.rs  memory.rs  state.rs
