[package]
name = "phakebit"
description = "A 6502 CPU emulator"
version = "0.1.2"
edition = "2021"
exclude = [
    "fixtures/*",
    ".github/",
    ".gitignore",
]
license = "MIT"
homepage = "https://github.com/jukeks/phakebit"
repository = "https://github.com/jukeks/phakebit"
readme = "README.md"

[dev-dependencies]
cargo-readme = "3.3.0"
circular-buffer = "0.1.3"
